Added registration and login, add bookmark functionality

--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -1,5 +1,7 @@
-<h1><%= @bookmark.title %></h1>
+<h3><%= @bookmark.title %></h3>
 <p><%= @bookmark.description %></p>
+<br>
+<p><%= @bookmark.created_at.strftime("Added on %b %d, %Y") %></p>
 
 <%= link_to "Back", root_path %>
 <%= link_to 'Edit', edit_bookmark_path %>
