--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,3 +6,22 @@
  @import "bootstrap-sprockets";
  @import "bootstrap";
  @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,600,700,800,300italic,400italic,600italic,700italic,800italic);
+
+body {
+  padding-top:50px;
+}
+
+.main-alerts {
+  width:100%;
+}
+
+.alert {
+  margin-bottom:0px !important;
+}
+
+.body-wrapper {
+  margin-top:25px;
+  width:90%;
+  margin-left:auto;
+  margin-right:auto;
+}
