--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -1,5 +1,7 @@
 <%= link_to "New Bookmark", new_bookmark_path, class: "btn btn-primary" %>
 
-<%= @bookmarks.each do |bookmark| %>
-  <h3><%= link_to bookmark.title, bookmark %></h3>
-<% end %>
+<div class = "bookmarks-list">
+  <% @bookmarks.each do |bookmark| %>
+    <h4><%= link_to bookmark.title, bookmark %></h4>
+  <% end %>
+</div>
