--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,14 +9,37 @@
 </head>
 <body>
 
-  <% flash.each do |name, msg| %>
-    <div class="alert alert-info">
-      <%= msg %>
-    </div>
-  <% end %>
+  <%= render 'layouts/navbar' %>
 
-  <div class="container">
-    <%= yield %>
+  <div class="main-alerts">
+    <!-- <% flash.each do |name, msg| %>
+      <div class="alert alert-info">
+        <%= msg %>
+      </div>
+    <% end %> -->
+    <% if flash[:notice] %>
+        <div class="alert alert-success">
+          <button type="button" class="close" data-dismiss="alert">&times;</button>
+          <%= flash[:notice] %>
+        </div>
+      <% elsif flash[:error] %>
+        <div class="alert alert-danger">
+          <button type="button" class="close" data-dismiss="alert">&times;</button>
+          <%= flash[:error] %>
+        </div>
+      <% elsif flash[:alert] %>
+        <div class="alert alert-warning">
+          <button type="button" class="close" data-dismiss="alert">&times;</button>
+          <%= flash[:alert] %>
+        </div>
+      <% end %>
+  </div>
+
+  <div class="container-fluid">
+
+    <div class="body-wrapper">
+      <%= yield %>
+    </div>
   </div>
 
 </body>
