--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,14 +1,27 @@
 /*
- *= require_tree .
- *= require_self
- */
+*= require 'masonry/basic'
+*= require 'masonry/centered'
+*= require 'masonry/fluid'
+*= require 'masonry/gutters'
+*= require 'masonry/infinitescroll'
+*= require 'masonry/right-to-left'
+*= require 'masonry/transitions'
+*= require_tree .
+*= require_self
+*/
 
  @import "bootstrap-sprockets";
  @import "bootstrap";
+ @import "font-awesome";
  @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,600,700,800,300italic,400italic,600italic,700italic,800italic);
 
 body {
-  padding-top:50px;
+  font-family: 'Open Sans', sans-serif;
+  -webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+  background-color: #FFFBE8;
+  position:relative;
+  min-width:770px !important;
 }
 
 .main-alerts {
@@ -19,9 +32,153 @@ body {
   margin-bottom:0px !important;
 }
 
-.body-wrapper {
-  margin-top:25px;
-  width:90%;
-  margin-left:auto;
+.main-content {
+  padding-top:25px;
+}
+
+.navbar {
+  position:relative;
+  height:160px !important;
+  background-color:#3A3636;
+  border-bottom: 5px solid #EA5E56;
+  margin-bottom:0px !important;
+}
+
+.nav {
+  position: absolute;
+  bottom: 0;
+  right:0;
+  margin-right: 15px;
+  margin-bottom: 15px;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #EA5E56;
+  border-color: #EA5E56;
+}
+.btn-primary:focus,
+.btn-primary.focus,
+.btn-primary:active {
+  color: #fff;
+  background-color: #CC514E !important;
+  border-color: #CC514E;
+}
+.btn-primary:hover {
+  color: #fff;
+  background-color: #CC514E;
+  border-color: #CC514E;
+}
+.btn-primary:active,
+.btn-primary.active,
+.open > .dropdown-toggle.btn-primary,
+.open > .btn-primary.dropdown-toggle:hover,
+.open > .btn-primary.dropdown-toggle:active,
+.open > .btn-primary.dropdown-toggle:focus,
+.open > .btn-primary.dropdown-toggle.focus {
+  color: #fff;
+  background-color: #CC514E !important;
+  border-color: #CC514E;
+}
+
+
+#username_nav {
+  background-color: #302D2D !important;
+}
+
+.navbar-default .navbar-nav > .open > a#username_nav:first-child, .navbar-default .navbar-nav > .open > a#username_nav:first-child:hover, .navbar-default .navbar-nav > .open > a#username_nav:first-child:focus {
+    background-color: #302D2D !important;
+    color: #FFFBE8;
+  }
+
+.navbar-default .navbar-nav > li > a {
+    color: #FFFBE8 !important;
+    font-weight:400;
+}
+
+.navbar-nav > li > a {
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.navbar-default .navbar-nav > li > a:hover {
+    color: #777;
+}
+
+.user-menu > li > a:hover, .user-menu > li > a:focus {
+  text-decoration: none;
+  color: #262626;
+  background-color: white;
+}
+
+
+ul.user-menu {
+  margin-top:25px !important;
+  margin-right:80px !important;
+}
+
+#nav-drop > a {
+  color: black !important;
+  background-color: white !important;
+}
+
+.left {
+  float:left;
+}
+
+.right {
+  float:right;
+}
+
+.active > a {
+  background-color:#302D2D !important;
+}
+
+.devise-wrap {
+  width:70%;
+  margin-left:80px;
   margin-right:auto;
+}
+
+.cat-list a {
+  color:#FFFBE8;
+  text-decoration: none;
+}
+
+.cat-list a:hover {
+  color:#FFFBE8;
+}
+
+.side-menu-link {
+  text-decoration: none;
+  color: #EA5E56;
+}
+
+.side-menu-link:hover {
+  text-decoration: none;
+  color: #EA5E56;
+}
+
+.panel-heading {
+  padding: 0px !important;
+}
+
+.fill {
+    display:flex !important;
+    justify-content:center;
+    align-items:center;
+    overflow:hidden
+}
+
+.fill img {
+    flex-shrink:0;
+    min-width:100%;
+    min-height:100%
+}
+
+a:hover {
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
 }
