--- a/app/views/bookmarks/_form.html.erb
+++ b/app/views/bookmarks/_form.html.erb
@@ -10,6 +10,14 @@
     </div>
   <% end %>
 
+  <!-- <div class="form-group">
+    <%= f.input :image, input_html: { class: 'form-control' } %>
+  </div> -->
+
+  <div class="form-group">
+    <%= f.input :url, input_html: { class: 'form-control' } %>
+  </div>
+
   <div class="form-group">
     <%= f.input :title, input_html: { class: 'form-control' } %>
   </div>
@@ -19,9 +27,10 @@
   </div>
 
   <div class="form-group">
-    <%= f.input :url, input_html: { class: 'form-control' } %>
+    <%= f.association :topic, :label_method => :title, value_method: :id %>
   </div>
 
-  <%= f.button :submit, class: 'btn btn-primary' %>
+  <%= link_to 'Cancel', bookmarks_path , class: "btn btn-default" %>
+  <%= f.button :submit, class: 'btn btn-primary pull-right' %>
 
 <% end %>
