--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -1,7 +1,40 @@
-<%= link_to "New Bookmark", new_bookmark_path, class: "btn btn-primary" %>
+<div class="row">
+  <div class="col-xs-12">
+    <div class = "btn-group pull-right">
+      <% if user_signed_in? %>
+        <button type = "button" class = "btn btn-primary dropdown-toggle" data-toggle = "dropdown">
+          Add Bookmark
+          <span class = "caret"></span>
+        </button>
+      <% end %>
 
-<div class = "bookmarks-list">
+       <ul class = "add-bookmark-menu dropdown-menu" role = "menu">
+          <li><%= link_to "Add by URL", new_bookmark_path %></li>
+          <li><a href = "#">Custom</a></li>
+       </ul>
+    </div>
+  </div>
+</div>
+<br>
+
+<!-- <%= link_to "Add Bookmark", new_bookmark_path, class: "btn btn-primary" %> -->
+<div id="bookmarks" class="row masonry-container transitions-enabled">
+
   <% @bookmarks.each do |bookmark| %>
-    <h4><%= link_to bookmark.title, bookmark %></h4>
+    <div class="box col-md-4 panel panel-default">
+      <div class="panel-heading fill">
+        <%= link_to bookmark do %>
+          <%= image_tag(display(bookmark.url)) %>
+        <% end %>
+      </div>
+      <div class="panel-body">
+        <span><%= link_to bookmark.title, bookmark %></span>
+      </div>
+      <div class="panel-footer">
+        <div id="category-tags">
+          <span id="tag">#<%= bookmark.topic.title %></span>
+        </div>
+      </div>
+    </div>
   <% end %>
 </div>
