--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,4 +1,5 @@
-<h3> New Bookmark </h3>
+<div class = "col-sm-8 col-sm-offset-2">
+  <h2> New Bookmark </h2>
 
-<%= render 'form' %>
-<%= link_to "Back", root_path %>
+  <%= render 'form' %>
+</div>
