Integrating angular in a couple views, adding OmniAuth for Facebook, Heroku

--- a/app/views/bookmarks/edit.html.erb
+++ b/app/views/bookmarks/edit.html.erb
@@ -1,5 +1,5 @@
 <div class = "col-sm-8 col-sm-offset-2">
-  <div class="panel panel-default">
+  <div class="panel panel-default edit-panel">
     <div class="panel-heading">
       <h3>Edit Bookmark</h3>
     </div>
