--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,5 +1,10 @@
 <div class = "col-sm-8 col-sm-offset-2">
-  <h2> New Bookmark </h2>
-
-  <%= render 'form' %>
+  <div class="panel panel-default edit-panel">
+    <div class="panel-heading">
+      <h3>New Bookmark</h3>
+    </div>
+    <div class="panel-body">
+      <%= render 'form' %>
+    </div>
+  </div>
 </div>
