--- a/app/assets/stylesheets/bookmarks.scss
+++ b/app/assets/stylesheets/bookmarks.scss
@@ -1,13 +1,13 @@
-#bookmarks {
+#masonry-container {
   margin: 0 auto;
-  width: 100%;
- .box {
+  width: auto;
+ .masonry-brick {
    padding: 0px !important;
-   min-width: 200px;
-   max-width: 250px;
    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.22);
    border-radius: 3px;
    text-align: center;
+   margin-bottom:20px;
+   max-width:300px !important;
    img {
      max-width: 100%;
      width:auto;
@@ -42,17 +42,25 @@
     margin-right:auto;
   }
 
-	.bookmark-image {
-		img {
-      max-width: 100%;
-			display: block;
-			margin: 0 auto;
-      max-height:350px !important;
-      width:100%;
-		}
-	}
+  .panel-heading {
+    padding:5px !important;
+  }
+
 	.panel-body {
-		padding: 10px;
+		padding: 0px;
+    .bookmark-image {
+  		img {
+        max-width: 100%;
+        height:auto;
+  			display: block;
+  			margin: 0 auto;
+        max-height:350px !important;
+        width:100%;
+  		}
+  	}
+    .panel-body-text {
+      padding: 15px;
+    }
 		h3 {
 			margin: 0 0 10px 0;
 		}
@@ -86,7 +94,7 @@ a.clickable:hover {
 {
     color: #333;
     background-color: #fff;
-    border-color: #ccc;
+    border: 1px solid #ddd;
     display: inline-block;
     padding: 6px 12px;
     border-radius: 4px
@@ -97,7 +105,6 @@ a.clickable:hover {
 .clickable .glyphicon:active, {
   color: #CC514E;
   background-color: #e6e6e6;
-  border-color: #adadad;
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;
   -webkit-transition-timing-function: ease-out;
@@ -115,6 +122,7 @@ a.clickable:hover {
 .side-nav {
   width:100%;
   max-width:220px;
+  min-width:160px !important;
   height:35em;
   padding-top:18px !important;
   padding:5px;
@@ -149,7 +157,7 @@ a.clickable:hover {
 
 .side-categories {
   text-align:right;
-  margin-right:20px;
+  padding-right:15px;
 }
 
 #side-title {
@@ -185,3 +193,27 @@ a.clickable:hover {
   text-align:left;
   color: #FFFBE8;
 }
+
+.current_img img {
+  max-width: 100%;
+  display: block;
+  margin: 0 auto;
+  max-height:250px !important;
+  width:100%;
+  padding-bottom:10px !important;
+}
+
+.edit-panel {
+  h3 {
+    padding-top:10px !important;
+    margin-top:0px !important;
+  }
+  .panel-heading {
+    padding:0px;
+    padding-left:15px !important;
+    background-color:#3a3636 !important;
+    color:#FFFBE8 !important;
+  }
+}
+
+// CSS Effects
