--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -1,15 +1,19 @@
 <div id="bookmark-show">
   <div>
     <div class="panel panel-default">
-      <div class="panel-heading bookmark-image">
-        <%= link_to bookmarks_path do %>
-          <span class="pull-left clickable close-panel"><i class="glyphicon glyphicon-remove"></i></span>
-        <% end %>
-        <%= image_tag(display(@bookmark.url)) %>
+      <div class="panel-heading clearfix">
+        <span class="pull-left clickable close-panel">
+          <a href="/bookmarks"><i class="glyphicon glyphicon-remove"></i></a>
+        </span>
       </div>
       <div class="panel-body">
-        <h3><%= @bookmark.title %></h3>
-        <p><%= @bookmark.description %></p>
+        <div class="bookmark-image">
+          <%= image_tag(display(@bookmark.url)) %>
+        </div>
+        <div class="panel-body-text">
+          <h3><%= @bookmark.title %></h3>
+          <p><%= @bookmark.description %></p>
+        </div>
       </div>
       <div class="panel-footer narrow-spacing">
         <div class="row">
