--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,7 +8,7 @@
     </div>
 
     <div id="nav">
-      <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav caps">
         <% if user_signed_in? %>
           <li class="dropdown">
             <a href="#" id="username_nav" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= current_user.name %><span class="caret"></span></a>
