--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -195,23 +195,29 @@ a:hover {
   width:100%;
 }
 
+/**** Isotope Filtering ****/
 
-
-
-
-
-
-
-.transitions-enabled.masonry,
-.transitions-enabled.masonry .masonry-brick {
-  -webkit-transition-duration: 0.2s;
-     -moz-transition-duration: 0.2s;
-      -ms-transition-duration: 0.2s;
-       -o-transition-duration: 0.2s;
-          transition-duration: 0.2s;
+.isotope-item {
+  z-index: 2;
 }
 
-.transitions-enabled.masonry {
+.isotope-hidden.isotope-item {
+  pointer-events: none;
+  z-index: 1;
+}
+
+/**** Isotope CSS3 transitions ****/
+
+.isotope,
+.isotope .isotope-item {
+  -webkit-transition-duration: 0.8s;
+     -moz-transition-duration: 0.8s;
+      -ms-transition-duration: 0.8s;
+       -o-transition-duration: 0.8s;
+          transition-duration: 0.8s;
+}
+
+.isotope {
   -webkit-transition-property: height, width;
      -moz-transition-property: height, width;
       -ms-transition-property: height, width;
@@ -219,23 +225,53 @@ a:hover {
           transition-property: height, width;
 }
 
-.transitions-enabled.masonry  .masonry-brick {
-  -webkit-transition-property: left, right, top;
-     -moz-transition-property: left, right, top;
-      -ms-transition-property: left, right, top;
-       -o-transition-property: left, right, top;
-          transition-property: left, right, top;
+.isotope .isotope-item {
+  -webkit-transition-property: -webkit-transform, opacity;
+     -moz-transition-property:    -moz-transform, opacity;
+      -ms-transition-property:     -ms-transform, opacity;
+       -o-transition-property:      -o-transform, opacity;
+          transition-property:         transform, opacity;
 }
 
 
-/* disable transitions on container */
-.transitions-enabled.infinite-scroll.masonry {
-  -webkit-transition-property: none;
-     -moz-transition-property: none;
-      -ms-transition-property: none;
-       -o-transition-property: none;
-          transition-property: none;
-}
+
+
+
+//
+// .transitions-enabled.masonry,
+// .transitions-enabled.masonry .masonry-brick {
+//   -webkit-transition-duration: 0.2s;
+//      -moz-transition-duration: 0.2s;
+//       -ms-transition-duration: 0.2s;
+//        -o-transition-duration: 0.2s;
+//           transition-duration: 0.2s;
+// }
+//
+// .transitions-enabled.masonry {
+//   -webkit-transition-property: height, width;
+//      -moz-transition-property: height, width;
+//       -ms-transition-property: height, width;
+//        -o-transition-property: height, width;
+//           transition-property: height, width;
+// }
+
+// .transitions-enabled.masonry  .masonry-brick {
+//   -webkit-transition-property: left, right, top;
+//      -moz-transition-property: left, right, top;
+//       -ms-transition-property: left, right, top;
+//        -o-transition-property: left, right, top;
+//           transition-property: left, right, top;
+// }
+//
+//
+// /* disable transitions on container */
+// .transitions-enabled.infinite-scroll.masonry {
+//   -webkit-transition-property: none;
+//      -moz-transition-property: none;
+//       -ms-transition-property: none;
+//        -o-transition-property: none;
+//           transition-property: none;
+// }
 
 // Loading Spinner CSS
 
