--- a/app/assets/stylesheets/bookmarks.scss
+++ b/app/assets/stylesheets/bookmarks.scss
@@ -1,7 +1,7 @@
-#masonry-container {
+#grid {
   margin: 0 auto;
   width: auto;
- .masonry-brick {
+ .box {
    padding: 0px !important;
    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.22);
    border-radius: 3px;
