--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -3,7 +3,7 @@
     <div class="panel panel-default">
       <div class="panel-heading clearfix">
         <span class="pull-left clickable close-panel">
-          <a href="/bookmarks"><i class="glyphicon glyphicon-remove"></i></a>
+          <a ui-sref="bookmarks"><i class="glyphicon glyphicon-remove"></i></a>
         </span>
       </div>
       <div class="panel-body">
